[metadata]
name = Turbo-Flask
version = 0.0.1
author = Francis Secada
author_email = francis.secada@gmail.com
description = Use Hotwire Turbo in your Flask application.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fsecada01/turbo-fastapi
project_urls =
    Bug Tracker = https://github.com/fsecada01/turbo-fastapi/issues
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = True
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    fastapi
    Websockets
    markupsafe

[options.packages.find]
where = src

[options.extras_require]
dev =
    anyio==3.6.2
    fastapi==0.92.0
    idna==3.4
    markupsafe==2.1.2
    pydantic==1.10.5
    sniffio==1.3.0
    starlette==0.25.0
    typing-extensions==4.5.0
    websockets==10.4
